2004-11-28 Robert Kaes <rjkaes@users.sourceforge.net>
  * [gpal] Improved context save during isr.
  * [gpal] Simplified symbol offsets in the code generator.

2004-11-26 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpal] Added symbol attributes.
  * [gpal] Added access types.
  * [gpal] Added volatile symbols.
  * [gpal] Added records.

2004-11-09 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpal] Write a newline before eof in deps output.
  * [gpal] Require a public file for the module being compiled.

2004-11-09 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpal] Generate Make compatible dependency lists.
  * [gpal] Attempt to open <public>.pub file if <public> isn't in memory.
  * [gpal] Use extended coff directives in gpal output files.
  * [gpasm] Fixed errors in new COFF directives.
  * [gplink] Sort sections in the map file.

2004-11-05 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Moved gpal FSR code to device specific code generators.

2004-11-05 Robert Kaes <rjkaes@users.sourceforge.net>
  * Improved gpal 16e code generator.

2004-10-29 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed bugs in gpal banksels, code generation, and optimizer.

2004-10-27 Robert Kaes <rjkaes@users.sourceforge.net>
  * Moved gpal reset and interrupt vectors to device specific code generators.
  * Fixed gpal com operator.
  * Fixed gpal bug when function calls appear in test expressions.
  * Improved gpal 16e indirect accesses, indf accesses, and inc/dec functions.

2004-10-26 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow conditionals in gpal subprogram declaration region.

2004-10-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow complex alias expresions in gpal.
  * Allow pragmas in gpal subprograms.
  * Add second pass to gpal optimizer.

2004-10-21 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Reduced number of gpal banksels.
